--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyOT"
         tools:targetApi="31">
+
         <activity
-            android:name=".EditMemoryActivity"
+            android:name=".MemoryBook.EditMemoryActivity"
             android:exported="false" />
+
+        <activity
+            android:name=".Chatting.NewChat.NewChatActivity"
+            android:exported="false" />
+        <!-- 채팅 생성을 위한 액티비티-->
+
+        <activity
+            android:name=".Chatting.ChatRoom.ChatRoomActivity"
+            android:exported="false" />
+        <!-- 채팅 생성을 위한 액티비티-->
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
