--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,16 +16,16 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".MemoryBook.EditMemoryActivity"
+            android:name=".memorybook.EditMemoryActivity"
             android:exported="false" />
 
         <activity
-            android:name=".Chatting.NewChat.NewChatActivity"
+            android:name=".chatting.newchat.NewChatActivity"
             android:exported="false" />
         <!-- 채팅 생성을 위한 액티비티-->
 
         <activity
-            android:name=".Chatting.ChatRoom.ChatRoomActivity"
+            android:name=".chatting.chatroom.ChatRoomActivity"
             android:exported="false" />
         <!-- 채팅 생성을 위한 액티비티-->
 
