feat: 글쓰기 화면 추가
- 글쓰기 레이아웃 구현
- 글쓰기 버튼 연동

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
         <!-- 채팅 생성을 위한 액티비티-->
 
         <activity
+            android:name=".write.WriteActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
