--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,11 @@
         <!-- 채팅 생성을 위한 액티비티-->
 
         <activity
-            android:name=".write.WriteActivity"
+            android:name=".write.WriteQuestionActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".write.WriteFeedActivity"
             android:exported="false" />
 
         <activity
