--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,31 +10,29 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyOT"
-        tools:targetApi="31"
-        android:networkSecurityConfig="@xml/network_security_config">
-
+        tools:targetApi="31">
+        <activity
+            android:name=".ticket.book.TicketBookActivity"
+            android:exported="false" />
         <activity
             android:name=".memorybook.EditMemoryActivity"
             android:exported="false" />
-
         <activity
             android:name=".chatting.newchat.NewChatActivity"
-            android:exported="false" />
-        <!-- 채팅 생성을 위한 액티비티-->
-
+            android:exported="false" /> <!-- 채팅 생성을 위한 액티비티 -->
         <activity
             android:name=".chatting.chatroom.ChatRoomActivity"
-            android:exported="false" />
-        <!-- 채팅 생성을 위한 액티비티-->
-
+            android:exported="false" /> <!-- 채팅 생성을 위한 액티비티 -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
