--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,30 +13,30 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyOT"
-        tools:targetApi="31">
+        android:networkSecurityConfig="@xml/network_security_config"
+    android:usesCleartextTraffic="true"
+    tools:targetApi="31">
 
-        <activity
-            android:name=".memorybook.EditMemoryActivity"
-            android:exported="false" />
+    <activity
+        android:name=".memorybook.EditMemoryActivity"
+        android:exported="false" />
 
-        <activity
-            android:name=".chatting.newchat.NewChatActivity"
-            android:exported="false" />
-        <!-- 채팅 생성을 위한 액티비티-->
+    <activity
+        android:name=".chatting.newchat.NewChatActivity"
+        android:exported="false" />
 
-        <activity
-            android:name=".chatting.chatroom.ChatRoomActivity"
-            android:exported="false" />
-        <!-- 채팅 생성을 위한 액티비티-->
+    <activity
+        android:name=".chatting.chatroom.ChatRoomActivity"
+        android:exported="false" />
 
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+    <activity
+        android:name=".MainActivity"
+        android:exported="true">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
+</application>
 
-</manifest>
+    </manifest>
