feat: 로그인 기능 구현
- 로그인 화면 구현
- 로그인 API 연동

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyOT"
         tools:targetApi="31">
+
+        <activity
+            android:name=".signup.SignupActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".login.LoginActivity"
+            android:windowSoftInputMode="adjustResize"/>
+
         <activity
             android:name=".memorybook.EditMemoryActivity"
             android:exported="false" />
@@ -37,11 +51,6 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
