--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
 
     <application
         android:name=".MyOTApplication"
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -16,7 +15,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyOT"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".ticket.ui.RecordActivity"
+            android:exported="false" />
         <activity
             android:name=".memorybook.EditMemoryActivity"
             android:exported="false" />
@@ -29,11 +32,9 @@
         <activity
             android:name=".write.WriteQuestionActivity"
             android:exported="false" />
-
         <activity
             android:name=".write.WriteFeedActivity"
             android:exported="false" />
-
         <activity
             android:name=".MainActivity"
             android:exported="true">
