feat: 홈/커뮤니티 기능 및 API 연동
- 커뮤니티 항목으로 이동 구현
- 커뮤니티 추가 화면 구현
- 커뮤니티 추가 API 연동
- 커뮤니티 검색 기능 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,10 @@
             android:windowSoftInputMode="adjustResize"/>
 
         <activity
+            android:name=".home.AddCommunityActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".ticket.ui.RecordActivity"
             android:exported="false" />
         <activity
