--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,14 +18,19 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
+
         <activity
-            android:name=".signup.SignupActivity"
+            android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".signup.SignupActivity"
+            android:exported="false"/>
 
         <activity
             android:name=".signup.SignupFlowActivity"
